<resources>
    <string name="app_name">Assigment</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_type">Contact type</string>
    <string name="businessType">Business</string>
    <string name="personal">Personal</string>
    <string name="save_contact">Save Contact</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="addNewContact">Add new Contact</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add new contact</string>
</resources>